@@ -1,3 +1,3 @@
-# please keep this list sorted alphabetically
-#
+# Please keep this list sorted alphabetically
 en_GB
+fr_FR
